--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,17 @@
+---
+const pageTitle = "My Astro Learning Blog";
+---
+
 <html>
 <head>
     <meta charset="utf-8"/>
-    <title>My Astro Learning Blog</title>
+    <title>{pageTitle}</title>
 </head>
 <body>
     <a href="/">Home</a>
     <a href="/about/">About</a>
     <a href="/blog/">Blog</a>
-    <h1>Blog</h1>
+    <h1>{pageTitle}</h1>
     <p>This is where I will post about my journey learning Astro.</p>
     <ul>
         <li><a href="/posts/post-1/">Post 1</a></li>
