--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,12 +1,13 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import TagList from "../components/TagList.astro";
 const {frontmatter} = Astro.props;
 ---
 <BaseLayout pageTitle={frontmatter.title}>
     <p>Published on: {frontmatter.pubDate.slice(0, 10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Written by {frontmatter.author}</p>
-    <p>Tags: {frontmatter.tags.join(", ")}</p>
+    <TagList tags={frontmatter.tags}/>
     <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt}/>
     <slot/>
 </BaseLayout>
