--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -30,7 +30,7 @@ const textCase = "uppercase";
     <title>{pageTitle}</title>
 </head>
 <body>
-<BaseLayout>
+<BaseLayout title={pageTitle}>
     <h2>... and my new Astro site!</h2>
 
     <p>I'm working through Astro's introductory tutorial. This is the second page on my website, and it's the first one
