--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,9 +1,10 @@
 ---
+import { ViewTransitions } from 'astro:transitions';
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import "../styles/global.css";
 
-const { pageTitle } = Astro.props;
+const {pageTitle} = Astro.props;
 ---
 <html lang="en">
 <head>
@@ -12,6 +13,7 @@ const { pageTitle } = Astro.props;
     <meta name="viewport" content="width=device-width"/>
     <meta name="generator" content={Astro.generator}/>
     <title>{pageTitle}</title>
+    <ViewTransitions/>
 </head>
 <body>
 <Header/>
